Started security features

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 springfox.documentation.swagger.v2.path=/docs
+
+jwt.secret=qk5o;hZRJ=L.u3@2sDR0f{jwL*,cL=;[LNURgOvDex{caFy14$2lTD.*LU/,uJS*@S+nLIQdc}Bv)ki5
+
 # server.error.include-stacktrace=never
