Seems enough to make cache works

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,4 +11,8 @@ springfox.documentation.swagger.v2.path=/docs
 
 jwt.secret=qk5o;hZRJ=L.u3@2sDR0f{jwL*,cL=;[LNURgOvDex{caFy14$2lTD.*LU/,uJS*@S+nLIQdc}Bv)ki5
 
+spring.cache.type=redis
+spring.redis.host=localhost
+spring.redis.port=6379
+
 # server.error.include-stacktrace=never
